# sp500_investing_feature_engineering

./: .gitignore  .pre-commit-config.yaml  data.h5  pyproject.toml
data/: assets.h5  data.h5  model_tuning.h5  predictions.h5
data/results/: best_lgb_model.csv  best_rf_model.csv  linreg_result_01.csv
data/results/us_stocks/: tuning_lgb.h5  tuning_rf.h5
original_notebooks copy/: 01_feature_engineering_week_NEW.ipynb  02_05_trading_signals_with_lightgbm_week.ipynb  03_06_evaluate_trading_signals2_week.ipynb  05_08_making_out_of_sample_predictions_week.ipynb  06_02_vectorized_backtest.ipynb  data.h5  utils.py
src/: 01_feature_engineering_week.ipynb  02_trading_signals_with_lightgbm_week.ipynb  03_evaluate_trading_signals_week.ipynb  05_making_out_of_sample_predictions_week.ipynb  06_vectorized_backtest.ipynb  data.h5  test.py  utils.py
