[project]
name = "tfm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gerard Casanovas", email = "gcasj98@gmail.com"},
]
dependencies = ["pandas-datareader>=0.10.0", "pandas>=2.2.3", "ipykernel>=6.29.5", "statsmodels>=0.14.4", "seaborn>=0.13.2", "scikit-learn>=1.6.1", "TA-Lib>=0.6.3", "yfinance>=0.2.55", "tables>=3.10.2", "lightgbm>=4.6.0", "catboost>=1.2.8", "alphalens-reloaded>=0.4.5", "shap>=0.47.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
